@@ -45,7 +45,9 @@ tone_task::tone_task(unsigned int tone_frequency, float tone_duration,
 // Construct / destroy:
 
 tone_generator::tone_generator(const configuration& conf):
-  audioplayer(conf.option_value[options::tones::device].as<string>())
+  audioplayer(conf.option_value[options::tones::device].as<string>().empty() ?
+              conf.option_value[options::audio::device].as<string>() :
+              conf.option_value[options::tones::device].as<string>())
 {
 }
 
